<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@color/main_background_color"
    tools:context=".MainActivity">

    <!-- Create ImageView quote -->
    <!-- Set src to @drawable/ic_quote -->
    <!-- Set contentDescription to @string/main_quote -->
    <!-- Set app:tint to @color/main_quote_tint -->
    <ImageView
        android:id="@+id/imageViewQuote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_quote"
        android:contentDescription="@string/main_quote"
        app:tint="@color/main_quote_tint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Set constraint start to end of ImageView quote -->
    <!-- Set constraint top to top of ImageView quote -->
    <!-- Set constraint bottom to bottom of ImageView quote -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:fontFamily="sans-serif-black"
        android:textSize="18sp"
        android:text="@string/main_title"
        android:textColor="@color/main_title_text_color"
        app:layout_constraintStart_toEndOf="@id/imageViewQuote"
        app:layout_constraintTop_toTopOf="@id/imageViewQuote"
        app:layout_constraintBottom_toBottomOf="@id/imageViewQuote" />

    <!-- Set constraint top to bottom of ImageView quote -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutBudi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_person_background"
        android:layout_marginTop="10dp"
        android:padding="20dp"
        app:layout_constraintTop_toBottomOf="@id/imageViewQuote">

        <!-- Set src to @drawable/ic_name -->
        <!-- Set contentDescription to @string/main_name -->
        <ImageView
            android:id="@+id/imageViewBudiName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_name"
            android:contentDescription="@string/main_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:textSize="12sp"
            android:text="@string/main_budi_name"
            android:textColor="@color/main_item_text_color"
            app:layout_constraintStart_toEndOf="@id/imageViewBudiName"
            app:layout_constraintTop_toTopOf="@id/imageViewBudiName"
            app:layout_constraintBottom_toBottomOf="@id/imageViewBudiName" />

        <!-- Set src to @drawable/ic_gender -->
        <!-- Set contentDescription to @string/main_gender -->
        <ImageView
            android:id="@+id/imageViewBudiGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_gender"
            android:contentDescription="@string/main_gender"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageViewBudiName" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:textSize="12sp"
            android:text="@string/main_budi_gender"
            android:textColor="@color/main_item_text_color"
            app:layout_constraintStart_toEndOf="@id/imageViewBudiGender"
            app:layout_constraintTop_toTopOf="@id/imageViewBudiGender"
            app:layout_constraintBottom_toBottomOf="@id/imageViewBudiGender" />

        <TextView
            android:id="@+id/textViewBudiQuote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="12sp"
            android:text="@string/main_budi_quote"
            android:textColor="@color/main_item_text_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageViewBudiGender" />

        <!-- Set background @drawable/selector_checkbox_favorite -->
        <!-- Set button @null -->
        <!-- Set onClick onClickCheckBoxBudiFavorite -->
        <CheckBox
            android:id="@+id/checkBoxBudiFavorite"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@drawable/selector_checkbox_favorite"
            android:button="@null"
            android:onClick="onClickCheckBoxBudiFavorite"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/textViewBudiFavorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/main_add_quote"
            android:textColor="@color/main_favorite_text_color"
            android:textSize="12sp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewBudiQuote"
            tools:visibility="visible" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Duplicate layoutBudi and create it for Anton -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutAnton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_person_background"
        android:layout_marginTop="10dp"
        android:padding="20dp"
        app:layout_constraintTop_toBottomOf="@id/layoutBudi">

        <ImageView
            android:id="@+id/imageViewAntonName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_name"
            android:contentDescription="@string/main_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:textSize="12sp"
            android:text="@string/main_anton_name"
            android:textColor="@color/main_item_text_color"
            app:layout_constraintStart_toEndOf="@id/imageViewAntonName"
            app:layout_constraintTop_toTopOf="@id/imageViewAntonName"
            app:layout_constraintBottom_toBottomOf="@id/imageViewAntonName" />

        <ImageView
            android:id="@+id/imageViewAntonGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_gender"
            android:contentDescription="@string/main_gender"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageViewAntonName" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:textSize="12sp"
            android:text="@string/main_budi_gender"
            android:textColor="@color/main_item_text_color"
            app:layout_constraintStart_toEndOf="@id/imageViewAntonGender"
            app:layout_constraintTop_toTopOf="@id/imageViewAntonGender"
            app:layout_constraintBottom_toBottomOf="@id/imageViewAntonGender" />

        <TextView
            android:id="@+id/textViewAntonQuote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="12sp"
            android:text="@string/main_anton_quote"
            android:textColor="@color/main_item_text_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageViewAntonGender" />

        <CheckBox
            android:id="@+id/checkBoxAntonFavorite"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@drawable/selector_checkbox_favorite"
            android:button="@null"
            android:onClick="onClickCheckBoxAntonFavorite"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/textViewAntonFavorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/main_add_quote"
            android:textColor="@color/main_favorite_text_color"
            android:textSize="12sp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewAntonQuote"
            tools:visibility="visible" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
